--- a/templates/common/server.xml/053_connectors.erb
+++ b/templates/common/server.xml/053_connectors.erb
@@ -1,5 +1,5 @@
 <%- [@connectors].flatten.compact.each do |connector| %>
-  <%- connector.each_pair do |attrib, att_value| -%>
+  <%- connector.sort.map do |attrib, att_value| -%>
     <%- if attrib == connector.keys.first -%>
     <Connector <%= attrib %>="<%= att_value %>"<% if attrib == connector.keys.last %> /><% end %>
     <%- else -%>
