--- a/templates/common/server.xml/040_threadpool_executor.erb
+++ b/templates/common/server.xml/040_threadpool_executor.erb
@@ -1,6 +1,6 @@
 
     <Executor name="<%= @threadpool_name %>"<% if @threadpool_params_real and ! @threadpool_params_real.empty? %>
-             <%- @threadpool_params_real.each_pair do |attrib, value| -%>
+             <%- @threadpool_params_real.sort.map do |attrib, value| -%>
               <%= attrib %>="<%= value %>"<% if attrib == @threadpool_params_real.keys.last %> /><% end %>
              <%- end -%>
            <%- else -%>
