--- a/templates/common/server.xml/041_executors.erb
+++ b/templates/common/server.xml/041_executors.erb
@@ -1,5 +1,5 @@
 <%- [@executors].flatten.compact.each do |executor| %>
-  <%- executor.each_pair do |attrib, att_value| -%>
+  <%- executor.sort.map do |attrib, att_value| -%>
     <%- if attrib == executor.keys.first -%>
     <Executor <%= attrib %>="<%= att_value %>"<% if attrib == executor.keys.last %> /><% end %>
     <%- else -%>
