--- a/templates/common/server.xml/100_valves.erb
+++ b/templates/common/server.xml/100_valves.erb
@@ -10,9 +10,9 @@
   <%- [@valves].flatten.compact.each do |valve| %>
     <%- valve.sort.map do |attrib, att_value| -%>
       <%- if attrib == valve.keys.first -%>
-        <Valve <%= attrib %>="<%= att_value %>"<% if attrib == valve.keys.last %> /><% end %>
+        <Valve <%= attrib %>="<%= att_value %>"<% if attrib == valve.keys.sort.last %> /><% end %>
       <%- else -%>
-               <%= attrib %>="<%= att_value %>"<% if attrib == valve.keys.last %> /><% end %>
+               <%= attrib %>="<%= att_value %>"<% if attrib == valve.keys.sort.last %> /><% end %>
       <%- end -%>
     <%- end -%>
   <%- end -%>
