--- a/templates/common/context.xml.erb
+++ b/templates/common/context.xml.erb
@@ -23,9 +23,9 @@
   <%- [@context_resources].flatten.compact.each do |resource| %>
   <%- resource.sort.map do |attrib, att_value| -%>
     <%- if attrib == resource.keys.first -%>
-    <ResourceLink <%= attrib %>="<%= att_value %>"<% if attrib == resource.keys.last %> /><% end %>
+    <ResourceLink <%= attrib %>="<%= att_value %>"<% if attrib == resource.keys.sort.last %> /><% end %>
     <%- else -%>
-                  <%= attrib %>="<%= att_value %>"<% if attrib == resource.keys.last %> /><% end %>
+                  <%= attrib %>="<%= att_value %>"<% if attrib == resource.keys.sort.last %> /><% end %>
     <%- end -%>
   <%- end -%>
   <%- end -%>
