--- a/templates/common/server.xml/050_http_connector.erb
+++ b/templates/common/server.xml/050_http_connector.erb
@@ -1,7 +1,7 @@
 
     <Connector port="<%= @http_port %>"<% if @ssl_connector %> redirectPort="<%= @ssl_port %>"<% end %><% if @http_params_real and ! @http_params_real.empty? %>
              <%- @http_params_real.sort.map do |attrib, value| -%>
-               <%= attrib %>="<%= value %>"<% if attrib == @http_params_real.keys.last %> /><% end %>
+               <%= attrib %>="<%= value %>"<% if attrib == @http_params_real.keys.sort.last %> /><% end %>
              <%- end -%>
            <%- else -%>
  />
