--- a/templates/common/server.xml/051_ssl_connector.erb
+++ b/templates/common/server.xml/051_ssl_connector.erb
@@ -1,7 +1,7 @@
 
     <Connector port="<%= @ssl_port %>" SSLEnabled="true" scheme="https" secure="true"<% if @ssl_params_real and ! @ssl_params_real.empty? %>
              <%- @ssl_params_real.sort.map do |attrib, value| -%>
-               <%= attrib %>="<%= value %>"<% if attrib == @ssl_params_real.keys.last %> /><% end %>
+               <%= attrib %>="<%= value %>"<% if attrib == @ssl_params_real.keys.sort.last %> /><% end %>
              <%- end -%>
            <%- else -%>
  />
