--- a/templates/common/server.xml/080_realms.erb
+++ b/templates/common/server.xml/080_realms.erb
@@ -10,9 +10,9 @@
   <%- [@realms].flatten.compact.each do |realm| %>
     <%- realm.sort.map do |attrib, att_value| -%>
       <%- if attrib == realm.keys.first -%>
-<% if @lockout_realm %>  <% end %>      <Realm <%= attrib %>="<%= att_value %>"<% if attrib == realm.keys.last %> /><% end %>
+<% if @lockout_realm %>  <% end %>      <Realm <%= attrib %>="<%= att_value %>"<% if attrib == realm.keys.sort.last %> /><% end %>
       <%- else -%>
-<% if @lockout_realm %>  <% end %>             <%= attrib %>="<%= att_value %>"<% if attrib == realm.keys.last %> /><% end %>
+<% if @lockout_realm %>  <% end %>             <%= attrib %>="<%= att_value %>"<% if attrib == realm.keys.sort.last %> /><% end %>
       <%- end -%>
     <%- end -%>
   <%- end -%>
