Added sort to first

--- a/templates/common/context.xml.erb
+++ b/templates/common/context.xml.erb
@@ -22,7 +22,7 @@
 <%- if @context_resources and ! @context_resources.empty? -%>
   <%- [@context_resources].flatten.compact.each do |resource| %>
   <%- resource.sort.map do |attrib, att_value| -%>
-    <%- if attrib == resource.keys.first -%>
+    <%- if attrib == resource.keys.sort.first -%>
     <ResourceLink <%= attrib %>="<%= att_value %>"<% if attrib == resource.keys.sort.last %> /><% end %>
     <%- else -%>
                   <%= attrib %>="<%= att_value %>"<% if attrib == resource.keys.sort.last %> /><% end %>
