--- a/templates/common/server.xml/020_globalnamingresources.erb
+++ b/templates/common/server.xml/020_globalnamingresources.erb
@@ -11,7 +11,7 @@
 <%- if @globalnaming_resources and ! @globalnaming_resources.empty? -%>
   <%- [@globalnaming_resources].flatten.compact.each do |resource| %>
     <%- resource.sort.map do |attrib, att_value| -%>
-      <%- if attrib == resource.keys.first -%>
+      <%- if attrib == resource.keys.sort.first -%>
     <Resource <%= attrib %>="<%= att_value %>"<% if attrib == resource.keys.sort.last %> /><% end %>
       <%- else -%>
               <%= attrib %>="<%= att_value %>"<% if attrib == resource.keys.sort.last %> /><% end %>
