--- a/templates/common/server.xml/041_executors.erb
+++ b/templates/common/server.xml/041_executors.erb
@@ -1,6 +1,6 @@
 <%- [@executors].flatten.compact.each do |executor| %>
   <%- executor.sort.map do |attrib, att_value| -%>
-    <%- if attrib == executor.keys.first -%>
+    <%- if attrib == executor.keys.sort.first -%>
     <Executor <%= attrib %>="<%= att_value %>"<% if attrib == executor.keys.sort.last %> /><% end %>
     <%- else -%>
               <%= attrib %>="<%= att_value %>"<% if attrib == executor.keys.sort.last %> /><% end %>
