--- a/templates/common/server.xml/053_connectors.erb
+++ b/templates/common/server.xml/053_connectors.erb
@@ -1,6 +1,6 @@
 <%- [@connectors].flatten.compact.each do |connector| %>
   <%- connector.sort.map do |attrib, att_value| -%>
-    <%- if attrib == connector.keys.first -%>
+    <%- if attrib == connector.keys.sort.first -%>
     <Connector <%= attrib %>="<%= att_value %>"<% if attrib == connector.keys.sort.last %> /><% end %>
     <%- else -%>
                <%= attrib %>="<%= att_value %>"<% if attrib == connector.keys.sort.last %> /><% end %>
