--- a/templates/common/server.xml/000_header.erb
+++ b/templates/common/server.xml/000_header.erb
@@ -5,5 +5,5 @@
 # ******************
 -->
 <Server<%- if @server_params_real and ! @server_params_real.empty? -%>
-  <%- @server_params_real.sort.map do |attrib, att_value| -%> <%= attrib %>="<%= att_value %>"<%- end -%>
+  <%- @server_params_real.sort.map do |attrib, value| -%> <%= attrib %>="<%= value %>"<%- end -%>
 <%- end -%>>
