--- a/templates/common/server.xml/010_listeners.erb
+++ b/templates/common/server.xml/010_listeners.erb
@@ -26,6 +26,6 @@
 <%- end -%>
 <%- if @listeners and ! @listeners.empty? -%>
   <%- [@listeners].flatten.compact.each do |listener| -%>
-  <Listener<%- listener.each_pair do |attrib, value| -%> <%= attrib %>="<%= value %>"<%- end -%> />
+  <Listener<%- listener.sort.each_pair do |attrib, value| -%> <%= attrib %>="<%= value %>"<%- end -%> />
   <%- end -%>
 <%- end -%>
