--- a/templates/common/context.xml/011_manager.erb
+++ b/templates/common/context.xml/011_manager.erb
@@ -1,2 +1,2 @@
 
-  <Manager<%- @context_manager.each_pair do |attrib, value| -%> <%= attrib %>="<%= value %>"<%- end -%> />
+  <Manager<%- @manager.each_pair do |attrib, value| -%> <%= attrib %>="<%= value %>"<%- end -%> />
