--- a/templates/common/context.xml/012_realm.erb
+++ b/templates/common/context.xml/012_realm.erb
@@ -1,2 +1,2 @@
 
-  <Realm<%- @context_realm.each_pair do |attrib, value| -%> <%= attrib %>="<%= value %>"<%- end -%> />
+  <Realm<%- @realm.each_pair do |attrib, value| -%> <%= attrib %>="<%= value %>"<%- end -%> />
