--- a/templates/common/context.xml/014_watchedresources.erb
+++ b/templates/common/context.xml/014_watchedresources.erb
@@ -1,4 +1,4 @@
 
-<%- @context_watchedresource.each do |watchedresource| -%>
+<%- [@watchedresources].flatten.compact.each do |watchedresource| -%>
   <WatchedResource><%= watchedresource %></WatchedResource>
 <%- end -%>
