--- a/templates/common/context.xml/050_valves.erb
+++ b/templates/common/context.xml/050_valves.erb
@@ -1,4 +1,4 @@
-<%- [@context_valves].flatten.compact.each do |valve| %>
+<%- [@valves].flatten.compact.each do |valve| %>
   <%- valve.each_pair do |attrib, value| -%>
     <%- if attrib == valve.keys.first -%>
   <Valve <%= attrib %>="<%= value %>"<% if attrib == valve.keys.last %> /><% end %>
