--- a/templates/common/context.xml/010_loader.erb
+++ b/templates/common/context.xml/010_loader.erb
@@ -1,2 +1,2 @@
 
-  <Loader<%- @context_loader.each_pair do |attrib, value| -%> <%= attrib %>="<%= value %>"<%- end -%> />
+  <Loader<%- @loader.each_pair do |attrib, value| -%> <%= attrib %>="<%= value %>"<%- end -%> />
