--- a/templates/common/context.xml/013_resources.erb
+++ b/templates/common/context.xml/013_resources.erb
@@ -1,2 +1,2 @@
 
-  <Resources<%- @context_resources.each_pair do |attrib, value| -%> <%= attrib %>="<%= value %>"<%- end -%> />
+  <Resources<%- @resources.each_pair do |attrib, value| -%> <%= attrib %>="<%= value %>"<%- end -%> />
