--- a/templates/common/context.xml/040_listeners.erb
+++ b/templates/common/context.xml/040_listeners.erb
@@ -1,4 +1,4 @@
-<%- [@context_listeners].flatten.compact.each do |listener| %>
+<%- [@listeners].flatten.compact.each do |listener| %>
   <%- listener.each_pair do |attrib, value| -%>
     <%- if attrib == listener.keys.first -%>
   <Listener <%= attrib %>="<%= value %>"<% if attrib == listener.keys.last %> /><% end %>
