set tomcat package version = $version (#23)

--- a/templates/common/server.xml/010_listeners.erb
+++ b/templates/common/server.xml/010_listeners.erb
@@ -1,5 +1,5 @@
 
-<%- if scope.function_versioncmp([@version, '8.0.14']) >= 0 -%>
+<%- if scope.function_versioncmp([@version_real, '8.0.14']) >= 0 -%>
   <Listener className="org.apache.catalina.startup.VersionLoggerListener" />
 <%- end -%>
 <%- if scope.function_versioncmp([@maj_version, '7']) >= 0 -%>
