--- a/templates/instance/systemd_unit_rhel.erb
+++ b/templates/instance/systemd_unit_rhel.erb
@@ -3,14 +3,13 @@ Description=Apache Tomcat Web Application Container
 After=syslog.target network.target
 
 [Service]
-Type=forking
+Type=simple
+EnvironmentFile=-<%= @config_path_real %>
 ExecStart=<%= @service_start_real %>
 ExecStop=<%= @service_stop_real %>
 SuccessExitStatus=143
 User=<%= scope['::tomcat::tomcat_user_real'] %>
 Group=<%= scope['::tomcat::tomcat_group_real'] %>
-Environment="SERVICE_NAME=\"<%= @service_name_real %>\""
-EnvironmentFile=-<%= @config_path_real %>
 
 
 [Install]
