--- a/templates/instance/systemd_unit_rhel.erb
+++ b/templates/instance/systemd_unit_rhel.erb
@@ -8,8 +8,8 @@ EnvironmentFile=-<%= @config_path_real %>
 ExecStart=<%= @service_start_real %>
 ExecStop=<%= @service_stop_real %>
 SuccessExitStatus=143
-User=<%= scope['::tomcat::tomcat_user_real'] %>
-Group=<%= scope['::tomcat::tomcat_group_real'] %>
+User=<%= @tomcat_user %>
+Group=<%= @tomcat_group %>
 
 
 [Install]
