--- a/templates/common/setenv.erb
+++ b/templates/common/setenv.erb
@@ -18,12 +18,12 @@ CATALINA_TMPDIR="<%= @catalina_tmpdir_real %>"
 <% end -%>
 
 <% if scope['::osfamily'] == 'Debian' -%>
-TOMCAT<%= @maj_version %>_USER="<%= scope['::tomcat::tomcat_user_real'] %>"
-TOMCAT<%= @maj_version %>_GROUP="<%= scope['::tomcat::tomcat_group_real'] %>"
+TOMCAT<%= @maj_version %>_USER="<%= @tomcat_user %>"
+TOMCAT<%= @maj_version %>_GROUP="<%= @tomcat_group %>"
 
 <% else -%>
-TOMCAT_USER="<%= scope['::tomcat::tomcat_user_real'] %>"
-TOMCAT_GROUP="<%= scope['::tomcat::tomcat_group_real'] %>"
+TOMCAT_USER="<%= @tomcat_user %>"
+TOMCAT_GROUP="<%= @tomcat_group %>"
 
 <% end -%>
 <% if @lang and @lang != '' -%>LANG="<%= @lang %>"<% end -%>
