add systemd_service_type param
add validation for systemd_service_type

remove validation

add param docs

fix ordering

fedora < 20 uses forking only

--- a/templates/instance/systemd_unit_fedora.erb
+++ b/templates/instance/systemd_unit_fedora.erb
@@ -3,7 +3,7 @@ Description=Apache Tomcat Web Application Container
 After=syslog.target network.target
 
 [Service]
-Type=forking
+Type=<%= @systemd_service_type_real %>
 ExecStart=<%= @service_start_real %>
 ExecStop=<%= @service_stop_real %>
 SuccessExitStatus=143
