--- a/templates/instance/systemd_unit_rhel.erb
+++ b/templates/instance/systemd_unit_rhel.erb
@@ -3,7 +3,7 @@ Description=Apache Tomcat Web Application Container
 After=syslog.target network.target
 
 [Service]
-Type=simple
+Type=<%= @systemd_service_type_real %>
 EnvironmentFile=-<%= @config_path_real %>
 ExecStart=<%= @service_start_real %>
 ExecStop=<%= @service_stop_real %>
