--- a/templates/instance/systemd_unit_fedora.erb
+++ b/templates/instance/systemd_unit_fedora.erb
@@ -7,8 +7,8 @@ Type=<%= @systemd_service_type_real %>
 ExecStart=<%= @service_start_real %>
 ExecStop=<%= @service_stop_real %>
 SuccessExitStatus=143
-User=<%= @tomcat_user %>
-Group=<%= @tomcat_group %>
+User=<%= @tomcat_user_real %>
+Group=<%= @tomcat_group_real %>
 Environment=SERVICE_NAME="<%= @service_name_real %>"
 EnvironmentFile=-<%= @config_path_real %>
 
