fix: encode value attributes in server.xml/context.xml

--- a/templates/common/context.xml/000_header.erb
+++ b/templates/common/context.xml/000_header.erb
@@ -5,5 +5,5 @@
 # ******************
 -->
 <Context<%- if @params and ! @params.empty? -%>
-  <%- @params.each_pair do |attrib, value| -%> <%= attrib %>="<%= value %>"<%- end -%>
+  <%- @params.each_pair do |attrib, value| -%> <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><%- end -%>
 <%- end -%>>
