--- a/templates/common/server.xml/090_host.erb
+++ b/templates/common/server.xml/090_host.erb
@@ -1,7 +1,7 @@
 
       <Host name="<%= @host_name %>"<% if @host_params_real and ! @host_params_real.empty? %>
              <%- @host_params_real.each_pair do |attrib, value| -%>
-            <%= attrib %>="<%= value %>"<% if attrib == @host_params_real.keys.last %>><% end %>
+            <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == @host_params_real.keys.last %>><% end %>
              <%- end -%>
            <%- else -%>
 >
