--- a/templates/common/server.xml/100_valves.erb
+++ b/templates/common/server.xml/100_valves.erb
@@ -10,9 +10,9 @@
   <%- [@valves].flatten.compact.each do |valve| %>
     <%- valve.each_pair do |attrib, value| -%>
       <%- if attrib == valve.keys.first -%>
-        <Valve <%= attrib %>="<%= value %>"<% if attrib == valve.keys.last %> /><% end %>
+        <Valve <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == valve.keys.last %> /><% end %>
       <%- else -%>
-               <%= attrib %>="<%= value %>"<% if attrib == valve.keys.last %> /><% end %>
+               <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == valve.keys.last %> /><% end %>
       <%- end -%>
     <%- end -%>
   <%- end -%>
