--- a/templates/common/context.xml/020_parameters.erb
+++ b/templates/common/context.xml/020_parameters.erb
@@ -1,9 +1,9 @@
 <%- [@parameters].flatten.compact.each do |parameter| %>
   <%- parameter.each_pair do |attrib, value| -%>
     <%- if attrib == parameter.keys.first -%>
-  <Parameter <%= attrib %>="<%= value %>"<% if attrib == parameter.keys.last %> /><% end %>
+  <Parameter <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == parameter.keys.last %> /><% end %>
     <%- else -%>
-             <%= attrib %>="<%= value %>"<% if attrib == parameter.keys.last %> /><% end %>
+             <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == parameter.keys.last %> /><% end %>
     <%- end -%>
   <%- end -%>
 <%- end -%>
