--- a/templates/common/server.xml/000_header.erb
+++ b/templates/common/server.xml/000_header.erb
@@ -5,5 +5,5 @@
 # ******************
 -->
 <Server<%- if @server_params_real and ! @server_params_real.empty? -%>
-  <%- @server_params_real.each_pair do |attrib, value| -%> <%= attrib %>="<%= value %>"<%- end -%>
+  <%- @server_params_real.each_pair do |attrib, value| -%> <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><%- end -%>
 <%- end -%>>
