--- a/templates/common/server.xml/020_globalnamingresources.erb
+++ b/templates/common/server.xml/020_globalnamingresources.erb
@@ -4,9 +4,9 @@
   <%- [@globalnaming_environments].flatten.compact.each do |environment| %>
     <%- environment.each_pair do |attrib, value| -%>
       <%- if attrib == environment.keys.first -%>
-    <Environment <%= attrib %>="<%= value %>"<% if attrib == environment.keys.last %> /><% end %>
+    <Environment <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == environment.keys.last %> /><% end %>
       <%- else -%>
-                 <%= attrib %>="<%= value %>"<% if attrib == environment.keys.last %> /><% end %>
+                 <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == environment.keys.last %> /><% end %>
       <%- end -%>
     <%- end -%>
   <%- end -%>
@@ -23,9 +23,9 @@
   <%- [@globalnaming_resources].flatten.compact.each do |resource| %>
     <%- resource.each_pair do |attrib, value| -%>
       <%- if attrib == resource.keys.first -%>
-    <Resource <%= attrib %>="<%= value %>"<% if attrib == resource.keys.last %> /><% end %>
+    <Resource <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == resource.keys.last %> /><% end %>
       <%- else -%>
-              <%= attrib %>="<%= value %>"<% if attrib == resource.keys.last %> /><% end %>
+              <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == resource.keys.last %> /><% end %>
       <%- end -%>
     <%- end -%>
   <%- end -%>
