Rename tomcat_user/group forwarded variable
Fixes #54

--- a/templates/instance/systemd_unit_rhel.erb
+++ b/templates/instance/systemd_unit_rhel.erb
@@ -11,8 +11,8 @@ Environment="SERVICE_NAME=<%= @service_name_real %>"
 ExecStart=<%= @service_start_real %>
 ExecStop=<%= @service_stop_real %>
 SuccessExitStatus=143
-User=<%= @tomcat_user_real %>
-Group=<%= @tomcat_group_real %>
+User=<%= @tomcat_user %>
+Group=<%= @tomcat_group %>
 
 
 [Install]
