--- a/templates/instance/systemd_unit_suse.erb
+++ b/templates/instance/systemd_unit_suse.erb
@@ -5,8 +5,8 @@ After=network.target
 [Service]
 Type=<%= @systemd_service_type_real %>
 EnvironmentFile=-<%= @config_path_real %>
-User=<%= @tomcat_user_real %>
-Group=<%= @tomcat_group_real %>
+User=<%= @tomcat_user %>
+Group=<%= @tomcat_group %>
 ExecStart=<%= @service_start_real %>
 ExecStop=<%= @service_stop_real %>
 StandardOutput=syslog
