allow cluster to be in host or in engine, firewall updates, tomcat8 fix
open cluster firewall ports

cluster will default to engine if not using farm deployer
if you try to use farm deployer and specify cluster type of engine it 
will fail validation

cluster_parent = engine | host

remove JvmRouteSessionIDBinderListener from cluster config for tomcat 8+

From: https://tomcat.apache.org/migration-8.html

The addition of the HttpServletRequest.changeSessionId() method in
Servlet 3.1 made the
org.apache.catalina.ha.session.JvmRouteSessionIDBinderListener
unnecessary so it has been removed. It must be removed from cluster
configurations when upgrading to Tomcat 8.

--- a/templates/common/server.xml/070_cluster.erb
+++ b/templates/common/server.xml/070_cluster.erb
@@ -33,6 +33,8 @@
                     watchDir="<%= @cluster_farm_deployer_watchdir %>"
                     watchEnabled="<%= @cluster_farm_deployer_watch_enabled %>"/>
 <%- end -%>
+<%- if scope.function_versioncmp([@maj_version, '8']) < 0 -%>
          <ClusterListener className="org.apache.catalina.ha.session.JvmRouteSessionIDBinderListener"/>
+<%- end -%>
          <ClusterListener className="org.apache.catalina.ha.session.ClusterSessionListener"/>
       </Cluster>
