--- a/templates/common/web.xml/012_servlet_jsp.erb
+++ b/templates/common/web.xml/012_servlet_jsp.erb
@@ -2,13 +2,13 @@
     <servlet>
         <servlet-name>jsp</servlet-name>
         <servlet-class>org.apache.jasper.servlet.JspServlet</servlet-class>
+<%- [@jsp_servlet_params].flatten.compact.each do |param| -%>
+  <%- param.each_pair do |attrib, value| -%>
         <init-param>
-            <param-name>fork</param-name>
-            <param-value>false</param-value>
+            <param-name><%= attrib %></param-name>
+            <param-value><%= value %></param-value>
         </init-param>
-        <init-param>
-            <param-name>xpoweredBy</param-name>
-            <param-value>false</param-value>
-        </init-param>
+  <%- end -%>
+<%- end -%>
         <load-on-startup>3</load-on-startup>
     </servlet>
