Add more parameters for web.xml
configurable:
* url-patterns (servlet-mappings)
* session-timeout (session-config)
* welcome-file-list

--- a/templates/common/web.xml/040_sessionconfig.erb
+++ b/templates/common/web.xml/040_sessionconfig.erb
@@ -2,5 +2,5 @@
   <!-- ==================== Default Session Configuration ================= -->
 
     <session-config>
-        <session-timeout>30</session-timeout>
+        <session-timeout><%= @sessionconfig_sessiontimeout %></session-timeout>
     </session-config>
