Adjust indentation in context.xml

--- a/templates/common/UserDatabase_header.erb
+++ b/templates/common/UserDatabase_header.erb
@@ -4,4 +4,7 @@
 # Managed by Puppet
 # ******************
 -->
-<tomcat-users>
+<tomcat-users xmlns="http://tomcat.apache.org/xml"
+              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+              xsi:schemaLocation="http://tomcat.apache.org/xml tomcat-users.xsd"
+              version="1.0">
