--- a/templates/instance/tomcat_init_generic.erb
+++ b/templates/instance/tomcat_init_generic.erb
@@ -14,6 +14,9 @@
 # Short-Description: start and stop tomcat
 ### END INIT INFO
  
+
+export CATALINA_BASE=<%= @catalina_base_real %>
+
 start() {
   <%= @start_command %>
 }
