Fix default start/stop commands (systemd)

--- a/templates/instance/systemd_service_unit.erb
+++ b/templates/instance/systemd_service_unit.erb
@@ -1,3 +1,7 @@
+# ******************
+# Managed by Puppet
+# ******************
+
 [Unit]
 Description=Apache Tomcat Web Application Container
 After=syslog.target network.target
