--- a/templates/instance/tomcat_init_generic.erb
+++ b/templates/instance/tomcat_init_generic.erb
@@ -1,5 +1,9 @@
 #!/bin/bash
 #
+# ******************
+# Managed by Puppet
+# ******************
+#
 # tomcat      This shell script takes care of starting and stopping Tomcat
 #
 # chkconfig: - 80 20
