Update XML headers, match tomcat 8.5+

--- a/templates/common/web.xml/000_header.erb
+++ b/templates/common/web.xml/000_header.erb
@@ -1,11 +1,21 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
 # ******************
 # Managed by Puppet
 # ******************
 -->
+<%- if scope.function_versioncmp([@version, '8']) <= 0 -%>
+  <%- @xsdmajor = "3" -%>
+  <%- @xsdminor = "0" -%>
+<%- elsif scope.function_versioncmp([@version, '8']) >= 0 && scope.function_versioncmp([@version, '9']) < 0 -%>
+  <%- @xsdmajor = "3" -%>
+  <%- @xsdminor = "1" -%>
+<%- else -%>
+  <%- @xsdmajor = "4" -%>
+  <%- @xsdminor = "0" -%>
+<%- end -%>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-                      http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-  version="3.1">
+                      http://xmlns.jcp.org/xml/ns/javaee/web-app_<%= @xsdmajor %>_<%= @xsdminor %>.xsd"
+  version="<%= @xsdmajor %>.<%= @xsdminor %>">
