--- a/templates/common/server.xml/010_listeners.erb
+++ b/templates/common/server.xml/010_listeners.erb
@@ -1,6 +1,9 @@
 
-<%- if scope.function_versioncmp([@version_real, '8.0.14']) >= 0 -%>
-  <Listener className="org.apache.catalina.startup.VersionLoggerListener" />
+<%- if @versionlogger_listener and scope.function_versioncmp([@version_real, '7']) >= 0 -%>
+  <Listener className="org.apache.catalina.startup.VersionLoggerListener" <% -%>
+  <%- if defined? @versionlogger_logargs %>logArgs="<%= @versionlogger_logargs %>" <% end -%>
+  <%- if defined? @versionlogger_logenv %>logEnv="<%= @versionlogger_logenv %>" <% end -%>
+  <%- if defined? @versionlogger_logprops %>logProps="<%= @versionlogger_logprops %>" <% end -%>/>
 <%- end -%>
 <%- if @maj_version == '7' -%>
   <Listener className="org.apache.catalina.core.JasperListener" />
